Добавил сущность ProcessStatus, сервис и контроллер для нее. Добавил ProcessStatus в Process.
